- working it coverage by activating profile only